# noloong

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  DESIGN.md  LICENSE  README.md  README_ZH.md  build.rs  package.json
crates/noloong-agent/: Cargo.toml
crates/noloong-agent-core/: Cargo.toml
crates/noloong-agent-core/docs/: ARCHITECTURE.md  CONFORMANCE_MATRIX.md  EXTENSIONS.md
crates/noloong-agent-core/examples/: native_kernel.rs  stateful_agent.rs  stdio_ai_sdk.rs
crates/noloong-agent-core/src/: agent.rs  anthropic_messages.rs  chat_completions.rs  clock.rs  compaction.rs  error.rs  extension_conformance.rs  http_auth.rs  jsonrpc.rs  lib.rs  phase.rs  provider_utils.rs  providers.rs  reducer.rs  responses.rs  runtime.rs  sse.rs  store.rs  tool_arguments.rs  tool_names.rs  types.rs
crates/noloong-agent-core/src/jsonrpc/: adapters.rs  mod.rs  process.rs  wire.rs
crates/noloong-agent-core/src/phase/: assistant.rs  hooks.rs  mod.rs  standard.rs  tool.rs
crates/noloong-agent-core/src/runtime/: approval.rs  builder.rs  mod.rs  run_loop.rs
crates/noloong-agent-core/src/store/: memory.rs  mod.rs  sqlite.rs
crates/noloong-agent-core/src/types/: events.rs  extension.rs  media.rs  messages.rs  mod.rs  model.rs  thinking.rs  tools.rs
crates/noloong-agent-core/tests/: agent.rs  anthropic_live.rs  anthropic_messages.rs  chat_completions.rs  compaction.rs  conformance.rs  core.rs  extension_conformance.rs  extension_conformance_cli.rs  extension_docs_contract.rs  extension_language_examples.rs  jsonrpc.rs  jsonrpc_conformance.rs  media_flow.rs  openrouter_live.rs  phase_hooks.rs  responses.rs  responses_live.rs  runtime_core.rs  sqlite_store.rs  tool_flow.rs
crates/noloong-agent-core/tests/fixtures/: jsonrpc-conformance-extension.mjs  openrouter-deepseek-extension.mjs  stdio-extension.mjs
crates/noloong-agent-core/tests/support/: core.rs  mod.rs
crates/noloong-agent-telegram/: Cargo.toml
crates/noloong-agent-telegram/docs/: TELEGRAM.md
crates/noloong-agent-telegram/src/: access.rs  approval.rs  bridge.rs  callback.rs  commands.rs  config.rs  delivery.rs  display.rs  i18n.rs  input.rs  lib.rs  media.rs  network.rs  polling.rs  process.rs  queue.rs  render.rs  session.rs  telegram_api.rs  text.rs
crates/noloong-agent-weixin/: Cargo.toml
crates/noloong-agent-weixin/docs/: WEIXIN.md
crates/noloong-agent-weixin/src/: bridge.rs  config.rs  delivery.rs  display.rs  i18n.rs  ilink_api.rs  input.rs  lib.rs  login.rs  media.rs  polling.rs  render.rs  runtime.rs  session.rs  state.rs  text.rs
crates/noloong-agent-weixin/tests/: live_outbound.rs
crates/noloong-agent/docs/: ARCHITECTURE.md  CONFORMANCE_MATRIX.md  INTERACTION.md
crates/noloong-agent/examples/: background_command.rs
crates/noloong-agent/src/: approval.rs  client_state.rs  host.rs  i18n.rs  lib.rs  manifest.rs  mcp.rs  openai.rs  plugin.rs  session.rs  skills.rs  system_prompt.rs  text.rs
crates/noloong-agent/src/approval/: cache.rs  classification.rs  command_safety.rs  constants.rs  decisions.rs  hook.rs  metadata.rs  mod.rs  policy.rs  reviewer.rs
crates/noloong-agent/src/interaction/: automation.rs  client.rs  control.rs  display_projector.rs  error.rs  goal.rs  http.rs  jsonrpc.rs  mod.rs  profile.rs  protocol.rs  registry.rs  wire.rs
crates/noloong-agent/src/interaction/store/: codec.rs  memory.rs  mod.rs  object.rs  snapshot.rs  sql.rs  traits.rs
crates/noloong-agent/src/process/: manager.rs  mod.rs
crates/noloong-agent/src/prompts/: system.general.en.md  system.general.zh.md  system.gpt-5.5.en.md  system.gpt-5.5.zh.md  system.openai.en.md  system.openai.zh.md
crates/noloong-agent/src/tools/: file_edit.rs  goal.rs  host_exec.rs  manifest.rs  mod.rs  output_overflow.rs  subagent.rs
crates/noloong-agent/tests/: agent_session.rs  approval.rs  file_edit.rs  goal_tools.rs  host_environment.rs  host_exec_tools.rs  host_process_manager.rs  i18n.rs  interaction.rs  interaction_control.rs  interaction_http_transport.rs  interaction_jsonrpc.rs  interaction_registry.rs  interaction_registry_store_object.rs  interaction_registry_store_postgres.rs  interaction_registry_store_sqlite.rs  interaction_ws_client.rs  manifest.rs  manifest_evolution.rs  mcp_plugin.rs  openai_wiring.rs  plugin.rs  skills.rs  subagent_tools.rs  tool_output_overflow.rs
crates/noloong-app/: Cargo.toml  tauri.conf.json
crates/noloong-app/assets/: noloong-logo.icns
crates/noloong-app/capabilities/: main.json  settings.json
crates/noloong-app/src/: actions.rs  app_identity.rs  chat.rs  i18n.rs  interaction.rs  launch.rs  lib.rs  macos_bundle.rs  main.rs  model.rs  profile_config.rs  render_probe.rs  runtime.rs  runtime_control.rs  test_support.rs
crates/noloong-app/src/chat/: composer.rs  metadata.rs  streaming.rs  tests.rs  transcript.rs
crates/noloong-app/src/interaction/: http_client.rs  media.rs  ws.rs
crates/noloong-app/src/model/: chat_runtime.rs  helpers.rs  integrations.rs  tests.rs  types.rs
crates/noloong-app/src/view/: chat.rs  chat_items.rs  chat_metadata.rs  chrome.rs  controller.rs  jsonc.rs  jsonc_completion.rs  mod.rs  profile.rs  settings.rs  settings_components.rs  settings_panels.rs  settings_provider.rs  toast.rs
crates/noloong-app/tests/: tauri_shell.rs  typescript_contracts.rs
crates/noloong-config/: Cargo.toml
crates/noloong-config/src/: extension.rs  lib.rs  locale.rs  manifest.rs  plugin.rs  profile.rs  runtime_modes.rs  schema.rs  sqlite_database_url.rs
crates/noloong-config/src/profile/: tests.rs
crates/noloong-config/src/schema/: tests.rs
crates/noloong-openai/: Cargo.toml  README.md
crates/noloong-openai/examples/: chatgpt_browser_login.rs  chatgpt_device_login.rs
crates/noloong-openai/src/: compact.rs  lib.rs  provider.rs  util.rs
crates/noloong-openai/src/auth/: manager.rs  mod.rs  storage.rs  token.rs
crates/noloong-openai/src/auth/login/: browser.rs  config.rs  (+4 more)
crates/noloong-openai/tests/: auth_manager.rs  auth_storage.rs  auth_token.rs  compact.rs  live_chatgpt.rs  login.rs  provider.rs
crates/noloong-openai/tests/support/: jwt.rs  logging.rs  mod.rs
(+151 files in other folders)
