[workspace]
members = [
    ".",
    "crates/noloong-agent-core",
    "crates/noloong-agent",
    "crates/noloong-agent-telegram",
    "crates/noloong-openai",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
noloong-agent-core = { path = "crates/noloong-agent-core" }
noloong-agent = { path = "crates/noloong-agent" }
noloong-agent-telegram = { path = "crates/noloong-agent-telegram" }
noloong-openai = { path = "crates/noloong-openai" }
base64 = "0.22"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "ws"] }
bytes = "1.11"
futures-util = { version = "0.3", features = ["sink"] }
getrandom = "0.4"
memchr = "2.8"
opendal = { version = "0.56", default-features = false, features = ["executors-tokio", "services-fs", "services-memory"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rusqlite = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1.52", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.29"
toasty = { version = "0.5", default-features = false }
toasty-driver-postgresql = "0.5"
toasty-driver-sqlite = "0.5"
url = "2.5"

[workspace.lints.rust]
dead_code = "deny"

[package]
name = "noloong"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
noloong-agent = { workspace = true, features = ["interaction-http", "openai", "registry-store-object", "registry-store-postgres", "registry-store-sqlite"] }
noloong-agent-core = { workspace = true, features = ["sqlite-store"] }
noloong-agent-telegram.workspace = true
noloong-openai.workspace = true
getrandom.workspace = true
opendal.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["signal"] }
clap = { version = "4.6", features = ["derive"] }
