[workspace]
members = [
    ".",
    "crates/noloong-app",
    "crates/noloong-config",
    "crates/noloong-agent-core",
    "crates/noloong-agent",
    "crates/noloong-agent-telegram",
    "crates/noloong-agent-weixin",
    "crates/noloong-openai",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
noloong-agent-core = { path = "crates/noloong-agent-core" }
noloong-agent = { path = "crates/noloong-agent" }
noloong-agent-telegram = { path = "crates/noloong-agent-telegram" }
noloong-agent-weixin = { path = "crates/noloong-agent-weixin" }
noloong-openai = { path = "crates/noloong-openai" }
noloong-config = { path = "crates/noloong-config" }
noloong-app = { path = "crates/noloong-app" }
anyhow = "1.0"
aes = "0.9"
base64 = "0.22"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "ws"] }
bytes = "1.11"
config = { version = "0.15", default-features = false, features = ["json"] }
ecb = { version = "0.2", features = ["alloc"] }
futures-util = { version = "0.3", features = ["sink"] }
getrandom = "0.4"
hex = "0.4"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
jsonc-parser = { version = "0.32", features = ["serde", "serde_json"] }
jsonschema = { version = "0.46", default-features = false }
env_logger = "0.11"
human-panic = "2.0"
log = "0.4"
md-5 = "0.10"
memchr = "2.8"
mime_guess = "2.0"
opendal = { version = "0.56", default-features = false, features = ["executors-tokio", "services-fs", "services-memory"] }
qrcode = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls", "stream"] }
rmcp = { version = "1.7", default-features = false, features = ["client", "reqwest", "transport-child-process", "transport-streamable-http-client-reqwest"] }
rusqlite = "0.39"
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tar = "0.4"
tauri = "2.11"
tauri-build = "2.6"
thiserror = "2.0"
tokio = { version = "1.52", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.29"
toasty = { version = "0.6", default-features = false }
toasty-driver-postgresql = "0.6"
toasty-driver-sqlite = "0.6"
tower-http = "0.6"
url = "2.5"
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"

[workspace.lints.rust]
dead_code = "deny"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package]
clap_derive = { opt-level = 3 }
proc-macro2 = { opt-level = 3 }
quote = { opt-level = 3 }
schemars_derive = { opt-level = 3 }
serde_derive = { opt-level = 3 }
serde_repr = { opt-level = 3 }
syn = { opt-level = 3 }
thiserror-impl = { opt-level = 3 }
toasty-macros = { opt-level = 3 }

[package]
name = "noloong"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
embed-source-archive = []

[dependencies]
noloong-agent = { workspace = true, features = ["client-state-sqlite", "interaction-http", "json-schema", "mcp", "openai", "registry-store-object", "registry-store-postgres", "registry-store-sqlite"] }
noloong-agent-core = { workspace = true, features = ["json-schema", "sqlite-store"] }
noloong-agent-telegram.workspace = true
noloong-agent-weixin.workspace = true
noloong-openai.workspace = true
noloong-config.workspace = true
noloong-app.workspace = true
axum.workspace = true
env_logger.workspace = true
getrandom.workspace = true
human-panic.workspace = true
jsonc-parser.workspace = true
log.workspace = true
opendal.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["signal"] }
zstd.workspace = true
clap = { version = "4.6", features = ["derive"] }

[build-dependencies]
ignore.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
zstd.workspace = true
