[package]
name = "noloong-agent-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
json-schema = ["dep:schemars"]
sqlite-store = [
    "dep:rusqlite",
    "dep:toasty",
    "dep:toasty-driver-sqlite",
    "toasty/sqlite",
]

[dependencies]
bytes.workspace = true
memchr.workspace = true
reqwest.workspace = true
rusqlite = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toasty = { workspace = true, optional = true }
toasty-driver-sqlite = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true
log.workspace = true
