[package]
name = "noloong-agent-telegram"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
futures-util.workspace = true
noloong-agent = { workspace = true, features = ["interaction-client"] }
noloong-agent-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
