[package]
name = "noloong-agent-telegram"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
futures-util.workspace = true
log.workspace = true
noloong-agent = { workspace = true, features = ["client-state-sqlite", "interaction-client"] }
noloong-agent-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
