[package]
name = "noloong-agent-weixin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aes.workspace = true
base64.workspace = true
ecb.workspace = true
futures-util.workspace = true
getrandom.workspace = true
hex.workspace = true
image.workspace = true
log.workspace = true
md-5.workspace = true
mime_guess.workspace = true
noloong-agent = { workspace = true, features = ["client-state-sqlite", "interaction-client"] }
noloong-agent-core.workspace = true
qrcode.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
