[package]
name = "noloong-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
interaction-client = ["dep:futures-util", "dep:tokio-tungstenite"]
interaction-http = ["dep:axum", "dep:futures-util", "dep:tower-http", "dep:url"]
client-state-sqlite = ["dep:rusqlite"]
json-schema = ["dep:schemars", "noloong-agent-core/json-schema"]
mcp = ["dep:reqwest", "dep:rmcp"]
openai = ["dep:noloong-openai"]
registry-store-object = ["dep:base64", "dep:opendal"]
registry-store-postgres = ["dep:toasty", "dep:toasty-driver-postgresql", "toasty/postgresql"]
registry-store-sqlite = [
    "dep:rusqlite",
    "dep:toasty",
    "dep:toasty-driver-sqlite",
    "toasty/sqlite",
]

[dependencies]
axum = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
noloong-agent-core.workspace = true
noloong-openai = { workspace = true, optional = true }
opendal = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { workspace = true, optional = true }
toasty = { workspace = true, optional = true }
toasty-driver-postgresql = { workspace = true, optional = true }
toasty-driver-sqlite = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid.workspace = true
tower-http = { workspace = true, features = ["cors"], optional = true }

[dev-dependencies]
axum.workspace = true
env_logger.workspace = true
log.workspace = true
reqwest.workspace = true
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server"] }
tokio-tungstenite.workspace = true
