[package]
name = "noloong-app"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
noloong-config.workspace = true
anyhow.workspace = true
futures-util.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
lsp-types.workspace = true
mime_guess.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
