[package]
name = "noloong-app"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
noloong-config.workspace = true
anyhow.workspace = true
futures-util.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dev-dependencies]
image.workspace = true
tokio = { workspace = true, features = ["macros"] }
