[package]
name = "noloong-config"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
config.workspace = true
jsonc-parser.workspace = true
jsonschema.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
