[package]
name = "noloong-openai"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
getrandom.workspace = true
noloong-agent-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
env_logger.workspace = true
log.workspace = true
